--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "format:check": "prettier --check ."
   },
   "devDependencies": {
-    "@types/stats.js": "^0.17.3",
+    "@types/stats.js": "0.17.3",
     "prettier": "3.2.5",
     "typescript": "^5.0.2",
-    "vite": "^5.2.10"
+    "vite": "5.2.10"
   },
   "dependencies": {
-    "gl-matrix": "^3.4.3",
-    "stats.js": "^0.17.0"
+    "gl-matrix": "3.4.3",
+    "stats.js": "0.17.0"
   }
 }
