--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && tsc -p tsconfig.types.json",
     "preview": "vite preview",
     "format:fix": "prettier --write .",
     "format:check": "prettier --check ."
