--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "build": "tsc && vite build && tsc -p tsconfig.types.json",
     "preview": "vite preview",
     "format:fix": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "docs": "typedoc"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
     "@types/stats.js": "0.17.3",
     "prettier": "3.2.5",
+    "typedoc": "^0.25.13",
     "typescript": "^5.0.2",
     "vite": "5.2.10"
   },
